# Money_Keeper_bot

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
src/api/: main.py
src/api/v1/: routers.py
src/api/v1/endpoints/: payments.py
src/bot/: __init__.py  bot.py  state.py  test.db
src/bot/handlers/: category.py  main_menu.py  setting.py  sorting.py  statistics.py  validator.py
src/bot/keyboards/: cancel_button.py  category.py  category_inline.py  confirmation.py  main_menu.py  settings.py  sorting.py  statistics.py
src/database/: __init__.py  cache_db.py  database.py  models.py
src/repository/: category.py  operation.py  shop_matching.py  statistic.py  user.py
src/schemas/: android_app.py
src/services/: category.py  operation.py  statistic.py  user.py
src/utils/: config.py  generate_id.py
src/utils/factories/: user.py
src/utils/interfaces/: IUser.py
